<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="User_Screen">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:id="@+id/user_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView

            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/blue_shade"
            android:textSize="32sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:background="@drawable/white_background_rounded"
            android:backgroundTint="@color/green_shade"
            android:padding="10dp"
            app:layout_anchor="@id/user_name"
            app:layout_anchorGravity="bottom">

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0000"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/followers"
                app:layout_constraintStart_toStartOf="@+id/followers"
                app:layout_constraintTop_toBottomOf="@+id/followers" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0000"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/following"
                app:layout_constraintStart_toStartOf="@+id/following"
                app:layout_constraintTop_toBottomOf="@+id/following" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:isScrollContainer="true"
            android:padding="20dp"
            app:layout_anchor="@id/constraint"
            app:layout_anchorGravity="bottom">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textColor="@color/blue_shade"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/repocount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:overScrollMode="never"


            android:id="@+id/repoList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:paddingVertical="20dp"
            android:paddingLeft="5dp"
            app:layout_anchor="@id/constraint2"
            app:layout_anchorGravity="bottom"
            app:layout_insetEdge="bottom"
            android:paddingBottom="50dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>